--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,9 @@ extra_javascript:
   - https://unpkg.com/mermaid@10/dist/mermaid.min.js
   - javascripts/mermaid-init.js
 
+extra_css:
+  - stylesheets/overlays-v2.css
+
 plugins:
   - search:
       lang: ja
